--- a/libros.html
+++ b/libros.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Macromil Espel</title>
+    <title>Macromil Espel Latacunga xD</title>
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
